Create a data frame by parsing the launch HTML tables.

--- a/data_webscraping.ipynb
+++ b/data_webscraping.ipynb
@@ -116,7 +116,12 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "bbcbe703-2f63-4d20-acc3-06ad48c0f793",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -394,17 +399,402 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ce2c20a-fa5a-4e68-b945-efe433245121",
+   "metadata": {},
+   "source": [
+    "##### Create a data frame by parsing the launch HTML tables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ddd3df1c-22f7-472e-826f-c143c0963607",
+   "execution_count": 14,
+   "id": "a8cb8a77-9f98-4646-b093-6ec33d92a79a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create an empty dictionary with keys from extracted column names.\n",
+    "launch_dict = dict.fromkeys(column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6a606c27-d762-4714-81d6-fad563e30be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove an irrelevant column.\n",
+    "del launch_dict['Date and time ( )']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2d0466d5-c920-4b33-aa51-e8d80a65695b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(launch_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8cde2e73-5d2d-4857-ba61-06531443cf5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize each launch_dict value to be an empty list.\n",
+    "launch_dict['Flight No.'] = []\n",
+    "launch_dict['Launch site'] = []\n",
+    "launch_dict['Payload'] = []\n",
+    "launch_dict['Payload mass'] = []\n",
+    "launch_dict['Orbit'] = []\n",
+    "launch_dict['Customer'] = []\n",
+    "launch_dict['Launch outcome'] = []\n",
+    "# Adding some new keys.\n",
+    "launch_dict['Version Booster'] = []\n",
+    "launch_dict['Booster landing'] = []\n",
+    "launch_dict['Date'] = []\n",
+    "launch_dict['Time'] = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0b7974e2-d0bb-4172-869e-094c06e57afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper functions to extract the data from HTML tables.\n",
+    "def date_time(table_cells):\n",
+    "    return [data_time.strip() for data_time in list(table_cells.strings)][0:2]\n",
+    "\n",
+    "def booster_version(table_cells):\n",
+    "    out=''.join([booster_version for i,booster_version in enumerate( table_cells.strings) if i%2==0][0:-1])\n",
+    "    return out\n",
+    "\n",
+    "def landing_status(table_cells):\n",
+    "    out=[i for i in table_cells.strings][0]\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def get_mass(table_cells):\n",
+    "    mass=unicodedata.normalize(\"NFKD\", table_cells.text).strip()\n",
+    "    if mass:\n",
+    "        mass.find(\"kg\")\n",
+    "        new_mass=mass[0:mass.find(\"kg\")+2]\n",
+    "    else:\n",
+    "        new_mass=0\n",
+    "    return new_mass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "33f6baa8-9ba7-432f-aedd-e0bf086615ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_row = 0\n",
+    "#Extract each table \n",
+    "for table_number,table in enumerate(soup.find_all('table',\"wikitable plainrowheaders collapsible\")):\n",
+    "   # get table row \n",
+    "    for rows in table.find_all(\"tr\"):\n",
+    "        #check to see if first table heading is as number corresponding to launch a number \n",
+    "        if rows.th:\n",
+    "            if rows.th.string:\n",
+    "                flight_number=rows.th.string.strip()\n",
+    "                flag=flight_number.isdigit()\n",
+    "        else:\n",
+    "            flag=False\n",
+    "        #get table element \n",
+    "        row=rows.find_all('td')\n",
+    "        #if it is number save cells in a dictonary \n",
+    "        if flag:\n",
+    "            extracted_row += 1\n",
+    "            # Flight Number value\n",
+    "            launch_dict['Flight No.'].append(flight_number)\n",
+    "            #print(flight_number)\n",
+    "            datatimelist=date_time(row[0])\n",
+    "            \n",
+    "            # Date value\n",
+    "            date = datatimelist[0].strip(',')\n",
+    "            launch_dict['Date'].append(date)\n",
+    "            #print(date)\n",
+    "            \n",
+    "            # Time value\n",
+    "            time = datatimelist[1]\n",
+    "            launch_dict['Time'].append(time)\n",
+    "            #print(time)\n",
+    "              \n",
+    "            # Booster version\n",
+    "            bv=booster_version(row[1])\n",
+    "            if not(bv):\n",
+    "                bv=row[1].a.string\n",
+    "            launch_dict['Version Booster'].append(bv)\n",
+    "            #print(bv)\n",
+    "            \n",
+    "            # Launch Site\n",
+    "            launch_site = row[2].a.string\n",
+    "            launch_dict['Launch site'].append(launch_site)\n",
+    "            #print(launch_site)\n",
+    "            \n",
+    "            # Payload\n",
+    "            payload = row[3].a.string\n",
+    "            launch_dict['Payload'].append(payload)\n",
+    "            #print(payload)\n",
+    "            \n",
+    "            # Payload Mass\n",
+    "            payload_mass = get_mass(row[4])\n",
+    "            launch_dict['Payload mass'].append(payload_mass)\n",
+    "            #print(payload_mass)\n",
+    "            \n",
+    "            # Orbit\n",
+    "            orbit = row[5].a.string\n",
+    "            launch_dict['Orbit'].append(orbit)\n",
+    "            #print(orbit)\n",
+    "            \n",
+    "            # Customer\n",
+    "            if row[6].a:\n",
+    "                customer = row[6].a.string\n",
+    "            else:\n",
+    "                customer = None\n",
+    "            launch_dict['Customer'].append(customer)\n",
+    "            #print(customer)\n",
+    "            \n",
+    "            # Launch outcome\n",
+    "            launch_outcome = list(row[7].strings)[0]\n",
+    "            launch_dict['Launch outcome'].append(launch_outcome)\n",
+    "            #print(launch_outcome)\n",
+    "            \n",
+    "            # Booster landing\n",
+    "            booster_landing = landing_status(row[8])\n",
+    "            launch_dict['Booster landing'].append(booster_landing)\n",
+    "            #print(booster_landing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "2698d8ee-37c0-4754-9279-43459c197cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Flight No.', 'Launch site', 'Payload', 'Payload mass', 'Orbit', 'Customer', 'Launch outcome', 'payload', 'Version Booster', 'Booster landing', 'Date', 'Time'])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "launch_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1d7c69eb-66b2-4735-9912-53db9a00033a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flight No. 121\n",
+      "Launch site 121\n",
+      "Payload 121\n",
+      "Payload mass 121\n",
+      "Orbit 121\n",
+      "Customer 121\n",
+      "Launch outcome 121\n",
+      "payload 0\n",
+      "Version Booster 121\n",
+      "Booster landing 121\n",
+      "Date 121\n",
+      "Time 121\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the length of each column.\n",
+    "ls = list(launch_dict.keys())\n",
+    "for i in range(len(launch_dict)):\n",
+    "    print(ls[i],len(launch_dict[ls[i]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "279ca597-e67b-42ad-b60b-125c8e80b192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({ key:pd.Series(value) for key, value in launch_dict.items() })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fff9055b-e735-47b3-8f1f-b5039783fa2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Flight No.</th>\n",
+       "      <th>Launch site</th>\n",
+       "      <th>Payload</th>\n",
+       "      <th>Payload mass</th>\n",
+       "      <th>Orbit</th>\n",
+       "      <th>Customer</th>\n",
+       "      <th>Launch outcome</th>\n",
+       "      <th>payload</th>\n",
+       "      <th>Version Booster</th>\n",
+       "      <th>Booster landing</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon Spacecraft Qualification Unit</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>SpaceX</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F9 v1.07B0003.18</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>4 June 2010</td>\n",
+       "      <td>18:45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F9 v1.07B0004.18</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>8 December 2010</td>\n",
+       "      <td>15:43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>525 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F9 v1.07B0005.18</td>\n",
+       "      <td>No attempt\\n</td>\n",
+       "      <td>22 May 2012</td>\n",
+       "      <td>07:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>SpaceX CRS-1</td>\n",
+       "      <td>4,700 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F9 v1.07B0006.18</td>\n",
+       "      <td>No attempt</td>\n",
+       "      <td>8 October 2012</td>\n",
+       "      <td>00:35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>CCAFS</td>\n",
+       "      <td>SpaceX CRS-2</td>\n",
+       "      <td>4,877 kg</td>\n",
+       "      <td>LEO</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>Success\\n</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>F9 v1.07B0007.18</td>\n",
+       "      <td>No attempt\\n</td>\n",
+       "      <td>1 March 2013</td>\n",
+       "      <td>15:10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Flight No. Launch site                               Payload Payload mass  \\\n",
+       "0          1       CCAFS  Dragon Spacecraft Qualification Unit            0   \n",
+       "1          2       CCAFS                                Dragon            0   \n",
+       "2          3       CCAFS                                Dragon       525 kg   \n",
+       "3          4       CCAFS                          SpaceX CRS-1     4,700 kg   \n",
+       "4          5       CCAFS                          SpaceX CRS-2     4,877 kg   \n",
+       "\n",
+       "  Orbit Customer Launch outcome payload   Version Booster Booster landing  \\\n",
+       "0   LEO   SpaceX      Success\\n     NaN  F9 v1.07B0003.18         Failure   \n",
+       "1   LEO     NASA        Success     NaN  F9 v1.07B0004.18         Failure   \n",
+       "2   LEO     NASA        Success     NaN  F9 v1.07B0005.18    No attempt\\n   \n",
+       "3   LEO     NASA      Success\\n     NaN  F9 v1.07B0006.18      No attempt   \n",
+       "4   LEO     NASA      Success\\n     NaN  F9 v1.07B0007.18    No attempt\\n   \n",
+       "\n",
+       "              Date   Time  \n",
+       "0      4 June 2010  18:45  \n",
+       "1  8 December 2010  15:43  \n",
+       "2      22 May 2012  07:44  \n",
+       "3   8 October 2012  00:35  \n",
+       "4     1 March 2013  15:10  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8cb8a77-9f98-4646-b093-6ec33d92a79a",
+   "id": "87f572ca-f632-4fdd-9328-26b72727b1b7",
    "metadata": {},
    "outputs": [],
    "source": []
