Calculate the number of occurances of a value in each column.

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -170,9 +170,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27572135-d861-49af-9134-8205a720636f",
+   "metadata": {},
+   "source": [
+    "###### Calculate the number of occurances of each value in a column."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f501cbb6-3e45-4cd1-b1e3-1f9628535e14",
+   "id": "44210714-6787-4511-881d-ac58240283c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate number of launches on each site.\n",
+    "df['LaunchSite'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b84aaa76-b1a3-43ee-bfb5-c4393d8592cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate number and occurance of each Orbit.\n",
+    "df['Orbit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550a4961-0696-4744-a69c-eabf37f51e85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate number of launches to each orbit from each launch site.\n",
+    "df.groupby('LaunchSite')['Orbit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce2d8553-d3ff-4908-95b9-3fa913ff406f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate number of each outcome value occured in dataframe.\n",
+    "df['Outcome'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "738cdee6-06f6-49ba-88c6-807b535f3635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to calculate the number of occurances of each value in a column.\n",
+    "def getValueCounts(column_name):\n",
+    "    return df[column_name].value_counts()\n",
+    "\n",
+    "unique_items = df.nunique()\n",
+    "for i, v in unique_items.items():\n",
+    "    if 1 < v < 15:\n",
+    "        print(getValueCounts(i))\n",
+    "        print(\"-----\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ede4dd3d-1916-46c3-8f8b-cd66ab0662ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44210714-6787-4511-881d-ac58240283c5",
+   "id": "a72d600a-585d-4931-bdf7-e9f730800bf2",
    "metadata": {},
    "outputs": [],
    "source": []
