--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -240,17 +240,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ede4dd3d-1916-46c3-8f8b-cd66ab0662ed",
+   "cell_type": "markdown",
+   "id": "2300a23f-820f-4bf0-8cb9-1984d3541947",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### Creating landing outcome label from outcome column."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a72d600a-585d-4931-bdf7-e9f730800bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Occurance of values in Outcome column.\n",
+    "landing_outcomes = df['Outcome'].value_counts()\n",
+    "type(landing_outcomes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "834fdbef-7fa6-487b-9d6c-93d9378d2afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the labels from landing_outcomes.\n",
+    "for i, l in enumerate(landing_outcomes.keys()):\n",
+    "    print(i,l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ce1af0-89da-4624-8f47-7defc7bb34c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a set of outcomes where second stage didn't land successfully.\n",
+    "bad_outcomes = set(landing_outcomes.keys()[[1,3,5,6,7]])\n",
+    "bad_outcomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b4fa65b-28c0-4125-bbb5-d64cf565b4b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create landing outcome label(Class).\n",
+    "landing_class = [0 if i in bad_outcomes else 1 for i in df['Outcome']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcf0f7cc-71ad-4d6b-87c3-6e6c6148b1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add new column CLASS to the dataframe.\n",
+    "df['Class'] = landing_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f4341b-c3c5-4579-9a68-371720c76e5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3c1120-3424-41f2-97b6-c89354193664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check for the success rate of launches.\n",
+    "df['Class'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ba9a01-31b8-4bf7-a9d8-8ad2bd52480d",
    "metadata": {},
    "outputs": [],
    "source": []
