Load the updated DataFrame into a CSV file.

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -332,6 +332,17 @@
    "id": "41ba9a01-31b8-4bf7-a9d8-8ad2bd52480d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Load the new DataFrame into a CSV file.\n",
+    "df.to_csv(\"dataset_part_2.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a0dc60c-0d02-4755-bda4-b6c4979cd5d5",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
